crates/px4-sys/bindings/bindings.rs

/* automatically generated by rust-bindgen 0.70.1 */

pub const PX4_RS_LOG_LEVEL_DEBUG: u32 = 0;
pub const PX4_RS_LOG_LEVEL_INFO: u32 = 1;
pub const PX4_RS_LOG_LEVEL_WARN: u32 = 2;
pub const PX4_RS_LOG_LEVEL_ERROR: u32 = 3;
pub const PX4_RS_LOG_LEVEL_PANIC: u32 = 4;
pub type hrt_abstime = u64;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct hrt_call {
    pub _opaque: [u8; 64usize],
}
extern "C" {
    pub fn hrt_absolute_time() -> hrt_abstime;
}
extern "C" {
    pub fn hrt_call_every(
        entry: *mut hrt_call,
        delay: hrt_abstime,
        interval: hrt_abstime,
        callout: ::core::option::Option<unsafe extern "C" fn(arg1: *mut ::core::ffi::c_void)>,
        arg: *mut ::core::ffi::c_void,
    );
}
extern "C" {
    pub fn hrt_cancel(entry: *mut hrt_call);
}
pub type orb_id_size_t = u16;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct orb_metadata {
    pub o_name: *const ::core::ffi::c_char,
    pub o_size: u16,
    pub o_size_no_padding: u16,
    pub message_hash: u32,
    pub o_id: orb_id_size_t,
    pub o_queue: u8,
}
pub type orb_advert_t = *mut ::core::ffi::c_void;
extern "C" {
    pub fn orb_advertise_multi(
        meta: *const orb_metadata,
        data: *const ::core::ffi::c_void,
        instance: *mut ::core::ffi::c_int,
    ) -> orb_advert_t;
}
extern "C" {
    pub fn orb_unadvertise(handle: orb_advert_t) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn orb_publish(
        meta: *const orb_metadata,
        handle: orb_advert_t,
        data: *const ::core::ffi::c_void,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn orb_subscribe(meta: *const orb_metadata) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn orb_subscribe_multi(
        meta: *const orb_metadata,
        instance: ::core::ffi::c_uint,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn orb_unsubscribe(handle: ::core::ffi::c_int) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn orb_copy(
        meta: *const orb_metadata,
        handle: ::core::ffi::c_int,
        buffer: *mut ::core::ffi::c_void,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn orb_check(handle: ::core::ffi::c_int, updated: *mut bool) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn orb_exists(
        meta: *const orb_metadata,
        instance: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn px4_log_modulename(
        level: ::core::ffi::c_int,
        module_name: *const ::core::ffi::c_char,
        fmt: *const ::core::ffi::c_char,
        ...
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct px4_rs_wq_config {
    pub name: *const ::core::ffi::c_char,
    pub stacksize: u16,
    pub relative_priority: i8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct px4_rs_work_queue {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct px4_rs_work_item {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct px4_rs_sub_cb {
    _unused: [u8; 0],
}
extern "C" {
    pub fn px4_rs_wq_find_or_create(cfg: *const px4_rs_wq_config) -> *mut px4_rs_work_queue;
}
extern "C" {
    pub fn px4_rs_wi_new(
        cfg: *const px4_rs_wq_config,
        name: *const ::core::ffi::c_char,
        ctx: *mut ::core::ffi::c_void,
        run: ::core::option::Option<unsafe extern "C" fn(ctx: *mut ::core::ffi::c_void)>,
    ) -> *mut px4_rs_work_item;
}
extern "C" {
    pub fn px4_rs_wi_schedule_now(wi: *mut px4_rs_work_item);
}
extern "C" {
    pub fn px4_rs_wi_schedule_delayed(wi: *mut px4_rs_work_item, delay_us: u32);
}
extern "C" {
    pub fn px4_rs_wi_schedule_on_interval(
        wi: *mut px4_rs_work_item,
        interval_us: u32,
        delay_us: u32,
    );
}
extern "C" {
    pub fn px4_rs_wi_schedule_clear(wi: *mut px4_rs_work_item);
}
extern "C" {
    pub fn px4_rs_wi_delete(wi: *mut px4_rs_work_item);
}
extern "C" {
    pub fn px4_rs_find_orb_meta(name: *const ::core::ffi::c_char) -> *const orb_metadata;
}
extern "C" {
    pub fn px4_rs_sub_cb_new(
        meta: *const orb_metadata,
        interval_us: u32,
        instance: u8,
        ctx: *mut ::core::ffi::c_void,
        call: ::core::option::Option<unsafe extern "C" fn(ctx: *mut ::core::ffi::c_void)>,
    ) -> *mut px4_rs_sub_cb;
}
extern "C" {
    pub fn px4_rs_sub_cb_register(cb: *mut px4_rs_sub_cb) -> bool;
}
extern "C" {
    pub fn px4_rs_sub_cb_unregister(cb: *mut px4_rs_sub_cb);
}
extern "C" {
    pub fn px4_rs_sub_cb_update(cb: *mut px4_rs_sub_cb, dst: *mut ::core::ffi::c_void) -> bool;
}
extern "C" {
    pub fn px4_rs_sub_cb_delete(cb: *mut px4_rs_sub_cb);
}
